# 24-880-workshop

./: .mcp.json  GEMINI.md  README.md  gemini-extension.json  pyproject.toml
agents/: workshop.md
hooks/: session-end  session-start
skills/commute-check/: SKILL.md
skills/hello-world/: SKILL.md
skills/weather-check/: SKILL.md
src/workshop_extension/data/gui/: index.html  main.js
src/workshop_extension/gui/: layout.py  lifecycle.py  server.py
src/workshop_extension/gui/mcp/: __init__.py  server.py
src/workshop_extension/gui/web/: index.html  package-lock.json  package.json  vite.config.ts
src/workshop_extension/gui/web/src/: App.tsx
src/workshop_extension/gui/web/src/components/: WeatherDashboard.tsx
src/workshop_extension/gui/web/src/hooks/: useWeather.ts
src/workshop_extension/mcp/: __init__.py  __main__.py  hello.py  types.py  utils.py
src/workshop_extension/transit/: client.py
src/workshop_extension/transit/mcp/: __init__.py  arrivals.py  stops.py
src/workshop_extension/weather/: client.py
src/workshop_extension/weather/mcp/: __init__.py  check.py
